--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta
+      name="description"
+      content="Who is Ahmet Bugra Yigiter? Ahmet Bugra Yiiter is a 2nd grade student at Gazi University Computer Engineering. Also Frontend Intern at Hipo. "
+    />
     <title>yigiterdev</title>
   </head>
   <body>
