--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <meta
       name="description"
-      content="Who is Ahmet Bugra Yigiter? Ahmet Bugra Yiiter is a 2nd grade student at Gazi University Computer Engineering. Also Frontend Intern at Hipo. "
+      content="Who is Ahmet Bugra Yigiter? Ahmet Bugra Yigiter is a 2nd grade student at Gazi University Computer Engineering. Also Frontend Intern at Hipo. "
     />
     <title>yigiterdev</title>
   </head>
